# DeplizMath

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
include/app/: app.h  exporter.h  history.h  pipeline.h
include/core/: ast.h  color_palette.h  constants.h  errors.h  types.h
include/evaluator/: derivative.h  evaluator.h
include/parser/: parser.h  tokenizer.h
include/renderer/: grid_renderer.h  plotter.h  viewport.h
src/: CMakeLists.txt  main.cpp
src/app/: CMakeLists.txt  app.cpp  exporter.cpp  history.cpp  pipeline.cpp
src/evaluator/: CMakeLists.txt  derivative.cpp  evaluator.cpp
src/parser/: CMakeLists.txt  parser.cpp  tokenizer.cpp
src/renderer/: CMakeLists.txt  grid_renderer.cpp  plotter.cpp  viewport.cpp
tests/: CMakeLists.txt  test_derivative.cpp  test_evaluator.cpp  test_history.cpp  test_parser.cpp  test_pipeline.cpp  test_tokenizer.cpp  test_viewport.cpp
